--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=notes-backend
 
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# Server Port (Render provides $PORT automatically)
+server.port=${PORT:8080}
+
+# ===============================
+spring.datasource.url=jdbc:mysql://root:LLAlRLqFhIABrFooUOlWdbhYSYBokcrR@centerbeam.proxy.rlwy.net:17876/railway
+spring.datasource.username=root
+spring.datasource.password=LLAlRLqFhIABrFooUOlWdbhYSYBokcrR
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# Optional Logging for debugging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
