--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.1.0</version><!--$NO-MVN-MAN-VER$--><!--$NO-MVN-MAN-VER$-->
+    <scope>runtime</scope>
+</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
